--- a/wisielec.html
+++ b/wisielec.html
@@ -9,16 +9,17 @@
         var hasla = ["mydło w płynie", "hamburger bez mięsa"]
 
         function ustawHaslo(){
-            var haslo = hasla[Math.floor(Math.random() * 2) - 1];
+            var haslo = hasla[Math.floor(Math.random() * 2)];
             var ukryteHaslo = haslo;
             for(i = 0; i < haslo.lenght; i++){
-                if(haslo[i] == " "){
-                    ukryteHaslo[i] = " ";
-                }
-                else{
+                if(ukryteHaslo[i] != " "){
                     ukryteHaslo[i] = "_";
                 }
+                else{
+                    ukryteHaslo[i] = " ";
+                }
             }
+            alert(ukryteHaslo);
             document.querySelector("#haslo").innerHTML = ukryteHaslo;
         }
     </script>
